tests/ui/async-await/async-fn/dyn-in-return-type.stderr
error[E0746]: return type cannot be a trait object without pointer indirection
  --> $DIR/dyn-in-return-type.rs:4:17
   |
LL | async fn f() -> dyn core::fmt::Debug {
   |                 ^^^^^^^^^^^^^^^^^^^^
   |
help: consider returning an `impl Trait` instead of a `dyn Trait`
   |
LL - async fn f() -> dyn core::fmt::Debug {
LL + async fn f() -> impl core::fmt::Debug {
   |
help: alternatively, box the return type, and wrap all of the returned values in `Box::new`
   |
LL | async fn f() -> Box<dyn core::fmt::Debug> {
   |                 ++++                    +

error[E0746]: return type cannot be a trait object without pointer indirection
  --> $DIR/dyn-in-return-type.rs:11:26
   |
LL |     async fn f(&self) -> dyn core::fmt::Debug {
   |                          ^^^^^^^^^^^^^^^^^^^^
   |
help: consider returning an `impl Trait` instead of a `dyn Trait`
   |
LL -     async fn f(&self) -> dyn core::fmt::Debug {
LL +     async fn f(&self) -> impl core::fmt::Debug {
   |
help: alternatively, box the return type, and wrap all of the returned values in `Box::new`
   |
LL |     async fn f(&self) -> Box<dyn core::fmt::Debug> {
   |                          ++++                    +

error[E0746]: return type cannot be a trait object without pointer indirection
  --> $DIR/dyn-in-return-type.rs:21:26
   |
LL |     async fn f(&self) -> dyn core::fmt::Debug {
   |                          ^^^^^^^^^^^^^^^^^^^^
   |
help: consider returning an `impl Trait` instead of a `dyn Trait`
   |
LL -     async fn f(&self) -> dyn core::fmt::Debug {
LL +     async fn f(&self) -> impl core::fmt::Debug {
   |
help: alternatively, box the return type, and wrap all of the returned values in `Box::new`
   |
LL |     async fn f(&self) -> Box<dyn core::fmt::Debug> {
   |                          ++++                    +

error[E0277]: the size for values of type `(dyn Debug + 'static)` cannot be known at compilation time
  --> $DIR/dyn-in-return-type.rs:11:26
   |
LL |     async fn f(&self) -> dyn core::fmt::Debug {
   |                          ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Debug + 'static)`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0746.
For more information about an error, try `rustc --explain E0277`.
